cmake_minimum_required(VERSION 3.13)
project("test-${the_library}")
file(GLOB sources "*.cpp")
foreach(source ${sources})
    get_filename_component(base "${source}" NAME_WE)
    add_executable("${base}" "${source}")
    set_property(TARGET "${base}" PROPERTY CXX_STANDARD 20)
    target_link_libraries("${base}" "${the_library}")
    add_test("${the_library}-${base}" "${base}")
endforeach()
